@@ -15,6 +15,8 @@ inventory:
 * Fix #582: Add other Acer monitors support
 * Fix #687: Virtuozzo inventory task doesn't include first container
 * Add few minor fix to virtuozzo containers inventory
+* Fix LXC containers support to support recent LXC versions
+* Fix #625: Container UUID is the same than host UUID
 
 netdiscovery/netinventory:
 * Add BlueCoat proxy appliance serialnumber support
